--- a/UDP_Server_Final.ipynb
+++ b/UDP_Server_Final.ipynb
@@ -20,14 +20,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "86.1328125\n",
-      "1.72265625\n",
-      "[ 1.75310658  6.23455782 17.9722449  27.62013605 60.00036281]\n",
+      "BPM:\n",
+      "60.09265988372093\n",
+      "Frequency (Hz):\n",
+      "1.0015443313953487\n",
+      "Breakpoints:\n",
+      "[  7.90639456  15.63863946  48.55292517  80.50358277  88.30548753\n",
+      " 104.02539683 120.00072562]\n",
       "UDP server up and ready to send a packet\n",
-      "Message from Client:b'Hi Jetson'\n",
-      "Message from Client:b'Hi Jetson'\n",
-      "Offset: 64.73255128860474s\n",
-      "Offset: 71.07620161056519s\n"
+      "Message from Client:b'Connected to server'\n",
+      "Message from Client:b'Times Recieved'\n",
+      "Starting in 3\n",
+      "Starting in 2\n",
+      "Starting in 1\n",
+      "Start!\n",
+      "Offset: 5.871104898452759s\n",
+      "Offset: 11.001721868515014s\n",
+      "Offset: 16.345123386383058s\n",
+      "Offset: 21.53584442138672s\n",
+      "Offset: 26.778767776489257s\n",
+      "Offset: 32.23679381370545s\n",
+      "Offset: 37.29714182853699s\n",
+      "Offset: 42.31837579727173s\n",
+      "Offset: 47.46663677215576s\n",
+      "Offset: 52.55186937332153s\n",
+      "Offset: 57.67629246711731s\n",
+      "Offset: 62.85249583244324s\n",
+      "Offset: 68.0525220489502s\n",
+      "Offset: 73.21945285797119s\n",
+      "Offset: 78.52359964370727s\n",
+      "Offset: 83.65044024467468s\n",
+      "Offset: 88.62490233421326s\n",
+      "Offset: 93.89679069519043s\n",
+      "Offset: 99.15006339073182s\n",
+      "Offset: 104.5362834262848s\n",
+      "Offset: 109.56969831466675s\n",
+      "Offset: 114.71890200614929s\n",
+      "Offset: 119.89442223548889s\n",
+      "Offset: 124.898565158844s\n",
+      "Offset: 159.711055059433s\n",
+      "Offset: 52.447607107162476s\n",
+      "Offset: 203.98309700012206s\n",
+      "Offset: 15.874528408050537s\n",
+      "Offset: 50.064588680267335s\n",
+      "Offset: 155.3612253856659s\n"
      ]
     }
    ],
@@ -77,12 +113,14 @@
     "    return offset\n",
     "\n",
     "#BPM/FREQUENCY\n",
-    "duration = 60\n",
-    "x, sr = librosa.load('mambo-no-5.wav',duration=duration)\n",
+    "duration = 120\n",
+    "x, sr = librosa.load('stromae.wav', duration = duration)\n",
     "ipd.Audio(x, rate=sr) #Loading Audio File\n",
     "tempo, beat_times = librosa.beat.beat_track(y=x, sr=sr, start_bpm=60, units='time')\n",
+    "print(\"BPM:\")\n",
     "print(tempo)\n",
-    "freq = tempo*.02\n",
+    "freq = tempo*(1/60)\n",
+    "print(\"Frequency (Hz):\")\n",
     "print(freq)\n",
     "\n",
     "#DANCE ROUTINE\n",
@@ -90,12 +128,12 @@
     "oenv = librosa.onset.onset_strength(y=x, sr=sr, hop_length=hop_length_tempo)\n",
     "tempogram = librosa.feature.tempogram(onset_envelope=oenv,sr=sr,hop_length=hop_length_tempo)\n",
     "algo = rpt.KernelCPD(kernel=\"linear\").fit(tempogram.T)\n",
-    "n_bkps = 4\n",
+    "n_bkps = 6\n",
     "bkps = algo.predict(n_bkps=n_bkps)\n",
     "bkps_times = librosa.frames_to_time(bkps, sr=sr, hop_length=hop_length_tempo)\n",
+    "print(\"Breakpoints:\")\n",
     "print(bkps_times) #this corresponds to the changes\n",
     "switch_times = bkps_times\n",
-    "\n",
     "############LAUNCHING THE SERVER############\n",
     "\n",
     "localIP     = \"\"\n",
@@ -104,8 +142,10 @@
     "\n",
     "bufferSize  = 1024\n",
     "\n",
-    "# Creating initial packets to send to the mouse\n",
-    "routine_pack = struct.pack(\"ffffff\",switch_times[0],switch_times[1],switch_times[2],switch_times[3],switch_times[4],freq)\n",
+    "# Creating initial packet to send to the mouse\n",
+    "routine_pack = struct.pack(\"ffffffff\",switch_times[0],switch_times[1],\n",
+    "                           switch_times[2],switch_times[3]\n",
+    "                           ,switch_times[4],switch_times[5],switch_times[6],freq)\n",
     "\n",
     "# Create a datagram socket\n",
     "UDPServerSocket = socket.socket(family=socket.AF_INET, type=socket.SOCK_DGRAM)\n",
@@ -124,7 +164,6 @@
     "print(clientMsg)\n",
     "\n",
     "#Send Dance Routine\n",
-    "time.sleep(5)\n",
     "UDPServerSocket.sendto(routine_pack, address)\n",
     "\n",
     "#Recieve confirmation times were sent\n",
@@ -134,6 +173,13 @@
     "address = bytesAddressPair[1]\n",
     "clientMsg = \"Message from Client:{}\".format(message)\n",
     "print(clientMsg)\n",
+    "print(\"Starting in 3\")\n",
+    "time.sleep(1)\n",
+    "print(\"Starting in 2\")\n",
+    "time.sleep(1)\n",
+    "print(\"Starting in 1\")\n",
+    "time.sleep(1)\n",
+    "print(\"Start!\")\n",
     "\n",
     "#Sending the live audio time in seconds every ~5 seconds\n",
     "while True:\n",
@@ -155,9 +201,8 @@
     "    wf.writeframes(b''.join(frames))\n",
     "    wf.close()\n",
     "    frames = []\n",
-    "    \n",
     "    #Finding Offset\n",
-    "    offset = find_offset('mambo-no-5.wav', 'output.wav', 10)\n",
+    "    offset = find_offset('stromae.wav', 'output.wav', 10)\n",
     "    end = time.time()\n",
     "    delay = end - start\n",
     "    offset = offset + delay\n",
@@ -175,32 +220,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "11575a55",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "92.28515625\n",
-      "1.845703125\n",
-      "[ 1.10294785 11.28489796 20.00399093]\n",
-      "UDP server up and ready to send a packet\n",
-      "Message from Client:b'Hi Jetson'\n",
-      "Client IP Address:('192.168.1.69', 3333)\n",
-      "Message from Client:b'Times Recieved'\n"
+      "C:\\Users\\Sammy\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<IPython.core.autocall.ZMQExitAutocall at 0x2a1bc875340>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BPM:\n",
+      "64.599609375\n",
+      "Frequency (Hz):\n",
+      "1.07666015625\n",
+      "Breakpoints:\n",
+      "[  1.31192744   6.2461678   51.86176871  70.13587302  80.88671202\n",
+      "  95.03927438 107.24136054 120.00072562]\n",
+      "UDP server up and ready to send a packet\n",
+      "Message from Client:b'Connected to server'\n",
+      "Message from Client:b'Times Recieved'\n",
+      "Starting in 3\n",
+      "Starting in 2\n",
+      "Starting in 1\n",
+      "Start!\n",
+      "Offset: 67.60427081108094s\n",
+      "Offset: 9.823065509796143s\n",
+      "Offset: 14.356309661865234s\n",
+      "Offset: 18.902047023773193s\n",
+      "Offset: 23.731204252243042s\n",
+      "Offset: 28.359758825302123s\n",
+      "Offset: 32.930024194717404s\n",
+      "Offset: 37.748472394943235s\n",
+      "Offset: 40.159466142654416s\n",
+      "Offset: 44.75800976753235s\n",
+      "Offset: 49.43829321861267s\n",
+      "Offset: 54.367762575149534s\n",
+      "Offset: 58.5080657863617s\n",
+      "Offset: 63.30317523002625s\n",
+      "Offset: 65.04207087516784s\n",
+      "Offset: 69.41466032028198s\n",
+      "Offset: 73.92884098052978s\n",
+      "Offset: 78.4948655796051s\n",
+      "Offset: 83.124046125412s\n",
+      "Offset: 87.90659752845764s\n",
+      "Offset: 92.67486915588378s\n",
+      "Offset: 99.20307001113892s\n",
+      "Offset: 103.7749814414978s\n",
+      "Offset: 108.3083250427246s\n",
+      "Offset: 113.18257269859313s\n",
+      "Offset: 117.7675053024292s\n",
+      "Offset: 122.42641498565673s\n",
+      "Offset: 127.15700673103332s\n",
+      "Offset: 106.68942251205445s\n",
+      "Offset: 107.50302750587463s\n",
+      "Offset: 196.08464778900145s\n"
+     ]
     }
    ],
    "source": [
@@ -222,6 +303,7 @@
     "import sys\n",
     "import wave\n",
     "from scipy import signal\n",
+    "import time\n",
     "\n",
     "#######INFORMATION TO SEND#################\n",
     "\n",
@@ -248,12 +330,14 @@
     "    return offset\n",
     "\n",
     "#BPM/FREQUENCY\n",
-    "duration = 20\n",
-    "x, sr = librosa.load('africa-toto.wav',duration=duration)\n",
+    "duration = 120\n",
+    "x, sr = librosa.load('anti-hero.wav', duration = duration)\n",
     "ipd.Audio(x, rate=sr) #Loading Audio File\n",
     "tempo, beat_times = librosa.beat.beat_track(y=x, sr=sr, start_bpm=60, units='time')\n",
+    "print(\"BPM:\")\n",
     "print(tempo)\n",
-    "freq = tempo*.02\n",
+    "freq = tempo*(1/60)\n",
+    "print(\"Frequency (Hz):\")\n",
     "print(freq)\n",
     "\n",
     "#DANCE ROUTINE\n",
@@ -261,12 +345,12 @@
     "oenv = librosa.onset.onset_strength(y=x, sr=sr, hop_length=hop_length_tempo)\n",
     "tempogram = librosa.feature.tempogram(onset_envelope=oenv,sr=sr,hop_length=hop_length_tempo)\n",
     "algo = rpt.KernelCPD(kernel=\"linear\").fit(tempogram.T)\n",
-    "n_bkps = 2\n",
+    "n_bkps = 7\n",
     "bkps = algo.predict(n_bkps=n_bkps)\n",
     "bkps_times = librosa.frames_to_time(bkps, sr=sr, hop_length=hop_length_tempo)\n",
+    "print(\"Breakpoints:\")\n",
     "print(bkps_times) #this corresponds to the changes\n",
     "switch_times = bkps_times\n",
-    "\n",
     "############LAUNCHING THE SERVER############\n",
     "\n",
     "localIP     = \"\"\n",
@@ -275,8 +359,11 @@
     "\n",
     "bufferSize  = 1024\n",
     "\n",
-    "# Creating initial packets to send to the mouse\n",
-    "routine_pack = struct.pack(\"ffff\",switch_times[0],switch_times[1],switch_times[2],freq)\n",
+    "# Creating initial packet to send to the mouse\n",
+    "routine_pack = struct.pack(\"fffffffff\",switch_times[0],switch_times[1],\n",
+    "                           switch_times[2],switch_times[3]\n",
+    "                           ,switch_times[4],switch_times[5],switch_times[6]\n",
+    "                           ,switch_times[7],freq)\n",
     "\n",
     "# Create a datagram socket\n",
     "UDPServerSocket = socket.socket(family=socket.AF_INET, type=socket.SOCK_DGRAM)\n",
@@ -293,19 +380,59 @@
     "clientMsg = \"Message from Client:{}\".format(message)\n",
     "clientIP  = \"Client IP Address:{}\".format(address)\n",
     "print(clientMsg)\n",
-    "print(clientIP)\n",
     "\n",
     "#Send Dance Routine\n",
-    "time.sleep(1)\n",
     "UDPServerSocket.sendto(routine_pack, address)\n",
     "\n",
+    "#Recieve confirmation times were sent\n",
     "time.sleep(2)\n",
     "bytesAddressPair = UDPServerSocket.recvfrom(bufferSize)\n",
     "message = bytesAddressPair[0]\n",
     "address = bytesAddressPair[1]\n",
     "clientMsg = \"Message from Client:{}\".format(message)\n",
     "print(clientMsg)\n",
+    "print(\"Starting in 3\")\n",
+    "time.sleep(1)\n",
+    "print(\"Starting in 2\")\n",
+    "time.sleep(1)\n",
+    "print(\"Starting in 1\")\n",
+    "time.sleep(1)\n",
+    "print(\"Start!\")\n",
     "\n",
+    "#Sending the live audio time in seconds every ~5 seconds\n",
+    "while True:\n",
+    "    start = time.time()\n",
+    "    p=pyaudio.PyAudio()\n",
+    "    stream=p.open(format=pyaudio.paInt16,channels=1,rate=RATE,input=True,\n",
+    "                  frames_per_buffer=CHUNK)\n",
+    "    for i in range(60):    #100 = 5 seconds\n",
+    "        soundplot(stream)\n",
+    "    stream.stop_stream()\n",
+    "    stream.close()\n",
+    "    p.terminate()\n",
+    "    \n",
+    "    wf = wave.open(\"output.wav\",'wb')\n",
+    "    wf.setnchannels(1)\n",
+    "    #wf.setsampwidth(p.get_sample_size(pyaudio.paInt16))\n",
+    "    wf.setsampwidth(2)\n",
+    "    wf.setframerate(RATE)\n",
+    "    wf.writeframes(b''.join(frames))\n",
+    "    wf.close()\n",
+    "    frames = []\n",
+    "    #Finding Offset\n",
+    "    offset = find_offset('anti-hero.wav', 'output.wav', 10)\n",
+    "    end = time.time()\n",
+    "    delay = end - start\n",
+    "    offset = offset + delay\n",
+    "    print(f\"Offset: {offset}s\" )\n",
+    "    #Creating Packet to Send to Mouse\n",
+    "    offset_pack = struct.pack(\"f\",offset)\n",
+    "    UDPServerSocket.sendto(offset_pack, address)\n",
+    "    \n",
+    "    #Ping to keep port open for sending packets\n",
+    "    bytesAddressPair = UDPServerSocket.recvfrom(bufferSize)\n",
+    "    message = bytesAddressPair[0]\n",
+    "    \n",
     "exit"
    ]
   },
@@ -313,6 +440,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "76578901",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6386196",
    "metadata": {},
    "outputs": [],
    "source": []
